# ndf

./: .envrc  .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml  flake.nix  justfile  package.nix
.config/: hakari.toml
.github/workflows/: ci.yaml
crates/workspace-hack/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: common.rs  examples.rs  main.rs
src/: attr_path.rs  cli.rs  color.rs  command.rs  compare.rs  diff_spec.rs  display.rs  eval.rs  git.rs  glob.rs  items.rs  lib.rs  main.rs  natural_ord.rs  nix.rs  source.rs  styles.rs  summary.rs  vcs.rs
src/attr_path/: tests.rs
src/glob/: display.rs  tests.rs
src/nix/: fetch-repo.nix  get-drv-path-file.nix  get-drv-path-flake.nix  get-file-output-attributes.nix  get-matching-file-outputs.nix  get-matching-flake-outputs.nix  tests.rs
src/vcs/: git.rs  jj.rs
tests/integration/: command.rs  git.rs  jj.rs  main.rs  nix.rs  test_case.rs
tests/integration/test_cases/: basic_file.toml  basic_flake.toml  common.toml  different_outputs_auto_select_file.toml  different_outputs_auto_select_flake.toml  different_outputs_file.toml  different_outputs_flake.toml  different_outputs_manual_select_file.toml  different_outputs_manual_select_flake.toml  dirty_working_tree_file.toml  dirty_worktree_file.toml  dirty_worktree_flake.toml  empty_attr_path_file.toml  empty_attr_path_flake.toml  empty_names_file.toml  empty_names_flake.toml  empty_repo_file.toml  empty_repo_flake.toml  file_auto_apply_function.toml  file_basic.toml  file_different_outputs_auto_select.toml  file_different_outputs_manual_select.toml  file_empty_names.toml  file_impure_by_default.toml  file_leading_dot.toml  file_manual_selection.toml  file_nixos_manual_selection.toml  file_no_changes.toml  file_no_outputs.toml  file_subdir.toml  flake_basic.toml  flake_default_outputs_sorting.toml  flake_empty_repo.toml  flake_impure.toml  flake_nixos_manual_selection.toml  flake_no_outputs.toml  flake_output_lookup.toml  flake_pure_by_default.toml  flake_search_up.toml  flake_subdir.toml  (+49 more)
