[package]
name = "ndf"
version = "0.1.1"
edition = "2024"
description = "Tool for comparing multiple Nix derivations between commits"
readme = "README.md"
repository = "https://github.com/bartoszwjn/ndf"
license = "MIT OR Apache-2.0"
keywords = ["nix"]
categories = ["command-line-utilities"]
publish = false
default-run = "ndf"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
env_logger = "0.11.10"
eyre = "0.6.12"
log = "0.4.29"
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.149"
unicode-width = { version = "0.2.2", default-features = false }
