[workspace]
members = ["crates/*"]

[package]
name = "ndf"
version = "0.1.3"
edition = "2024"
description = "Tool for comparing multiple Nix derivations between commits"
readme = "README.md"
repository = "https://github.com/bartoszwjn/ndf"
license = "MIT OR Apache-2.0"
keywords = ["nix"]
categories = ["command-line-utilities"]
publish = false
default-run = "ndf"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
eyre = { version = "0.6.12", default-features = false }
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = { version = "0.2.2", default-features = false }
workspace-hack = { version = "0.1", path = "crates/workspace-hack" }
