[package]
name = "ndf"
version = "0.3.0"
edition = "2024"
description = "Tool for comparing multiple Nix derivations between commits"
readme = "README.md"
repository = "https://github.com/bartoszwjn/ndf"
license = "MIT OR Apache-2.0"
keywords = ["nix"]
categories = ["command-line-utilities"]
publish = false
default-run = "ndf"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
eyre = { version = "0.6.12", default-features = false }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = { version = "0.2.2", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", features = ["std", "parse", "serde"] }
toml_edit = "0.25.12"
